--- a/examples/rp/.cargo/config.toml
+++ b/examples/rp/.cargo/config.toml
@@ -1,8 +1,22 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-run --chip RP2040"
+#runner = "probe-run --chip RP2040"
+runner = "probe-rs run --chip RP2040 --protocol swd --no-location"
+rustflags = [
+    "-C",
+    "linker=flip-link",
+
+    # Code-size optimizations.
+    #   trap unreachable can save a lot of space, but requires nightly compiler.
+    #   uncomment the next line if you wish to enable it
+    # "-Z", "trap-unreachable=no",
+    "-C",
+    "inline-threshold=5",
+    "-C",
+    "no-vectorize-loops",
+]
 
 [build]
-target = "thumbv6m-none-eabi"        # Cortex-M0 and Cortex-M0+
+target = "thumbv6m-none-eabi" # Cortex-M0 and Cortex-M0+
 
 [env]
 DEFMT_LOG = "debug"
